--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -118,7 +118,7 @@
     margin-top: 64px;
     height: 50px;
     border-radius: 8px;
-    font-weight: 500px;
+    font-weight: 500;
     background: #f8f8f8;
     color: #29292e;
 
