--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -2,7 +2,7 @@
   margin-top: 64px;
   height: 50px;
   border-radius: 8px;
-  font-weight: 500px;
+  font-weight: 500;
   background: #853afd;
   color: #fff;
   padding: 0 32px;
