--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -27,4 +27,10 @@
     opacity: 0.6;
     cursor: not-allowed;
   }
+
+  &.outlined {
+    background: #ffffff;
+    border-color: #835afd;
+    color: #835afd;
+  }
 }
